--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -11,11 +11,12 @@
 		<header>
 			<div class="container">
 				<a href="">PetDevShop</a>
-				<form method="GET" action="">
+				<form method="GET" action="/search">
 					<input
 						type="search"
 						name="q"
 						placeholder="Pesquise por raça"
+						value="{{query}}"
 					/>
 				</form>
 			</div>
